--- a/Jpage/templates/Jpage/map.html
+++ b/Jpage/templates/Jpage/map.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="csrf-token" content="{% csrf_token %}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Gaegu&family=Poor+Story&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/gh/bbbootstrap/libraries@main/datedropper.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Gaegu&family=Poor+Story&display=swap" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/gh/bbbootstrap/libraries@main/datedropper.css" rel="stylesheet"/>
     <title>현나</title>
     <style>
         .btn-outline-primary:hover {
@@ -148,8 +148,7 @@
         <div id="map-container">
             <div id="map"></div>
         </div>
-        <div class="modal fade" id="locationModal" tabindex="-1" aria-labelledby="locationModalLabel"
-             aria-hidden="true">
+        <div class="modal fade" id="locationModal" tabindex="-1" aria-labelledby="locationModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -181,11 +180,11 @@
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn text-white" style="background-color: #935d8c;"
-                                data-dismiss="modal">Close
+                        <button type="button" class="btn text-white" style="background-color: #935d8c;" data-dismiss="modal">
+                            Close
                         </button>
-                        <button type="button" class="btn text-white" style="background-color: #935d8c;"
-                                data-dismiss="modal" onclick="saveLocation()">Save changes
+                        <button type="button" class="btn text-white" style="background-color: #935d8c;" data-dismiss="modal" onclick="saveLocation()">
+                            Save changes
                         </button>
                     </div>
                 </div>
@@ -197,14 +196,10 @@
         <div class="row">
             <!-- 왼쪽에 버튼들 배치 -->
             <div class="col-md-6 d-flex justify-content-center align-items-center">
-                <button type="button" class="btn mr-4"
-                        style="border-color: black; background-color: #ffffff; margin-top: 10px;"
-                        data-toggle="modal" data-target="#locationModal">
+                <button type="button" class="btn mr-4" style="border-color: black; background-color: #ffffff; margin-top: 10px;" data-toggle="modal" data-target="#locationModal">
                     Select Location
                 </button>
-                <button type="button" class="btn"
-                        style="border-color: black; background-color: #ffffff; margin-top: 10px;"
-                        data-toggle="modal" data-target="#categoryModal">
+                <button type="button" class="btn" style="border-color: black; background-color: #ffffff; margin-top: 10px;" data-toggle="modal" data-target="#categoryModal">
                     Select Category
                 </button>
             </div>
@@ -212,13 +207,11 @@
                 <div class="row">
                     <div class="col-md-4" style="margin-top: -20px;">
                         <label>From</label>
-                        <input type="text" id="startDate" class="form-control"
-                               style="border-color: black; background-color: #ffffff;">
+                        <input type="text" id="startDate" class="form-control" style="border-color: black; background-color: #ffffff;">
                     </div>
                     <div class="col-md-4" style="margin-top: -20px;">
                         <label>To</label>
-                        <input type="text" id="endDate" class="form-control"
-                               style="border-color: black; background-color: #ffffff;">
+                        <input type="text" id="endDate" class="form-control" style="border-color: black; background-color: #ffffff;">
                     </div>
                     <div class="col-md-4" style="margin-top: -20px;">
                         <label>✨</label>
@@ -231,8 +224,7 @@
         </div>
     </div>
     <!-- 카테고리 선택하는 모달 -->
-    <div class="modal fade" id="categoryModal" tabindex="-1" role="dialog" aria-labelledby="categoryModalLabel"
-         aria-hidden="true">
+    <div class="modal fade" id="categoryModal" tabindex="-1" role="dialog" aria-labelledby="categoryModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -245,8 +237,7 @@
                     <form id="categoryForm" method="GET" action="{% url 'get_data' %}">
                         <div class="form-group">
                             <label for="selectCategory1">대분류</label>
-                            <select class="form-control" id="selectCategory1" name="cat1_code"
-                                    onchange="fetchMiddleCategories()">
+                            <select class="form-control" id="selectCategory1" name="cat1_code" onchange="fetchMiddleCategories()">
                                 <option value="">select</option>
                                 {% for largecategory in largecategories %}
                                 <option value="{{ largecategory.code }}">{{ largecategory.name }}</option>
@@ -255,8 +246,7 @@
                         </div>
                         <div class="form-group">
                             <label for="selectCategory2">중분류</label>
-                            <select class="form-control" id="selectCategory2" name="cat2_code"
-                                    onchange="fetchSmallCategories()">
+                            <select class="form-control" id="selectCategory2" name="cat2_code" onchange="fetchSmallCategories()">
                                 <option value="">select</option>
                                 {% for middlecategory in middlecategories %}
                                 <option value="{{ middlecategory.code }}">{{ middlecategory.name }}</option>
@@ -275,11 +265,9 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn text-white" style="background-color: #935d8c;"
-                            data-dismiss="modal">Close
+                    <button type="button" class="btn text-white" style="background-color: #935d8c;" data-dismiss="modal">Close
                     </button>
-                    <button type="button" class="btn text-white" style="background-color: #935d8c;" data-dismiss="modal"
-                            onclick="saveCategory()">Save changes
+                    <button type="button" class="btn text-white" style="background-color: #935d8c;" data-dismiss="modal" onclick="saveCategory()">Save changes
                     </button>
                 </div>
             </div>
@@ -292,8 +280,7 @@
         <div class="row">
             <!-- 장소 리스트 카드 -->
             <div class="col-md-6 d-flex justify-content-center align-items-center position-relative">
-                <div class="card place-card"
-                     style="width: 400px; height: 400px; background-color: #f5f5f5; border-radius: 0px; box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);">
+                <div class="card place-card" style="width: 400px; height: 400px; background-color: #f5f5f5; border-radius: 0px; box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);">
                     <div class="card-body">
                         <h3 class="card-title text-center">Place List ✏️</h3>
                         <div class="card-text" style="max-height: 280px; overflow-y: auto;">
@@ -308,8 +295,7 @@
 
             <!-- 일차별 선택된 장소 목록 카드 -->
             <div class="col-md-6 d-flex justify-content-center align-items-center position-relative">
-                <div class="card"
-                     style="width: 400px; height: 400px; background-color: #f5f5f5; border-radius: 0px; box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);">
+                <div class="card" style="width: 400px; height: 400px; background-color: #f5f5f5; border-radius: 0px; box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);">
                     <div class="card-body">
                         <div class="btn-group d-flex justify-content-center" role="group" aria-label="일차 선택">
                             <div id="dayButtons"></div>
@@ -1013,6 +999,7 @@
     }
 </script>
 <script>
+    var csrfToken = '{{ csrf_token }}';
     function getPlacesData() {
         var places = {};
         var daySections = document.querySelectorAll('.day-section');
